Legger til tidslinje (#990)